# Unstruct-EDFM-TwoPhaseFlow

./: .gitignore  0.1_FieldTools.h  0_PhysicalParametesCalculateandUpdata.h  14_DOP.cpp  14_DOP.h  2D-EDFM-SinglePhase-CO2-HT.h  2D-Unstr-Quadrilateral-EDFM.sln  2D-Unstr-Quadrilateral-EDFM.vcxproj  2D-Unstr-Quadrilateral-EDFM.vcxproj.filters  2D_CO2_Properties.cpp  2D_CO2_Properties.h  2D_EDFM_MeshTest_Benchmark.h  2D_EDFM_test.h  2D_FieldManager.h  2D_FracIndex.cpp  2D_FracIndex.h  2D_Fracture.cpp  2D_Fracture.h  2D_FractureEdge.cpp  2D_FractureEdge.h  2D_FractureIntersection.h  2D_FractureMeshElement.cpp  2D_FractureMeshElement.h  2D_FractureNetwork.cpp  2D_FractureNetwork.h  2D_FractureProperties.cpp  2D_FractureProperties.h  2D_Fracture_Frac1_Elements.txt  2D_Fracture_Frac1_Nodes.txt  2D_Mesh_test_.msh  2D_PhysicalPropertiesManager.cpp  2D_PhysicalPropertiesManager.h  2D_PostProcess.cpp  2D_PostProcess.h  2D_RockSolidProperties.cpp  2D_RockSolidProperties.h  2D_TwoPhase_TH_constProperties_FVM.cpp  2D_VariableInitializer.cpp  2D_VariableInitializer.h  2D_Water_Properties.cpp  (+400 more)
.codex_tmp/: PressureOnlyProbe.java  SolverProbe.java
.github/: copilot-instructions.md
FIM_TransientEngine/: Diagnostics.hpp  RunGeneric.hpp  RunGeneric_impl.hpp  StateSync.hpp  StepKernels.hpp  StepKernels_impl.hpp  Types.hpp
IMPES-Solver/: IMPES_FluxSplitter.h.md  IMPES_PressureAssembler.h.md  IMPES_PressureEqAssemblerandSolver.md  IMPES_SaturationTransport.h.md  IMPES_TemperatureAssembler.h.md  Solver_TimeLoopDriver_IMPES.h.md  TimeTerm_IMPES.h.md
T_test_tec/: T_step_0000010.plt  (+189 more)
(+2495 files in other folders)
